--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <h1>Reserva de Departamento Temporario</h1>
 
     <h2>Disponibilidad</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=f7cf3d72ead8a51f53f6cc28802308828995d2be3dddd81daf406c7029098899%40group.calendar.google.com&ctz=America%2FArgentina%2FBuenos_Aires"
-            width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FArgentina%2FBuenos_Aires&showPrint=0&showTz=0&showDate=0&showTabs=0&title=AAA&showTitle=0&src=ZjdjZjNkNzJlYWQ4YTUxZjUzZjZjYzI4ODAyMzA4ODI4OTk1ZDJiZTNkZGRkODFkYWY0MDZjNzAyOTA5ODg5OUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23ad1457" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
     <h2>Formulario de Reserva</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMlFLRf__PKQLZRWp2Z2XAn7npVwBsq7hUPm-dtGoJWoagdw/viewform?embedded=true"
