--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
       width: 100%;
       max-width: 800px;
     }
+
+    .contacto {
+      text-align: center;
+      margin-top: 40px;
+      padding-top: 20px;
+      border-top: 1px solid #ccc;
+      color: #555;
+    }
+
+    .contacto a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    .contacto a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -46,6 +63,12 @@
     <h2>Formulario de Reserva</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMlFLRf__PKQLZRWp2Z2XAn7npVwBsq7hUPm-dtGoJWoagdw/viewform?embedded=true"
             width="640" height="1057" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+
+    <div class="contacto">
+      <p>✅ Gracias por tu interés. Te responderemos pronto para confirmar tu reserva.</p>
+      <p>📧 Contacto: <a href="mailto:ejemplo@gmail.com">ejemplo@gmail.com</a></p>
+      <p>📱 WhatsApp: <a href="https://wa.me/5491123456789" target="_blank">+54 9 11 2345 6789</a></p>
+    </div>
   </div>
 
 </body>
